--- a/style.css
+++ b/style.css
@@ -12,3 +12,14 @@
     background-position: center;
     background-size: cover;
 }
+
+.side-nav{
+    width: 250px;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 30px 15px;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+}
