--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 .side-nav{
-    width: 250px;
+    width: 110px;
     height: 100%;
     position: fixed;
     top: 0;
@@ -31,12 +31,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
+    width: 60px;
     font-size: 12px;
     padding: 10px;
     border-radius: 8px;
     margin-left: auto;
     margin-right: auto;
+    overflow: hidden;
+}
+
+.user div{
+    display: none;
 }
 
 .user h2{
@@ -53,6 +58,7 @@
 
 .star-img{
     width: 20px;
+    display: none;
 }
 
 ul{
@@ -64,7 +70,7 @@ ul li{
     margin: 30px 0;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     cursor: pointer;
 }
 
@@ -75,4 +81,5 @@ ul li img{
 
 ul li p{
     white-space: nowrap;
+    display: none;
 }
